[package]
name = "nvmetcfg"
version = "0.1.0"
authors = ["Adrian 'vifino' Pistol <vifino@posteo.net>"]
license = "ISC"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75" }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1.5.0", features = ["serde"] }

[profile.release]
# Optimize for Size.
# Performance is mostly irrelevant.
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
